--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/tilepacks/desert/background/BG-sun.png")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/characters/player/male/charater_3/clothes_1/punch_4_alt.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/", "res://assets/tilepacks/", "res://assets/tilepacks/desert/", "res://assets/tilepacks/desert/tileset/", "res://assets/tilepacks/desert/showcase/", "res://assets/tilepacks/desert/props/", "res://assets/tilepacks/desert/background/", "res://assets/particle_effects/player_effects/", "res://assets/particle_effects/player_effects/smoke_and_dust/", "res://assets/characters/", "res://assets/characters/player/", "res://assets/characters/player/male/", "res://assets/characters/player/male/charater_3/", "res://assets/characters/player/male/charater_3/clothes_1/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -28,17 +28,17 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/player.tscn", "res://scenes/platform_01.tscn", "res://scenes/main.tscn", "res://scenes/player_effects.tscn", "res://scenes/background.tscn")
-current_scene="res://scenes/main.tscn"
+current_scene="res://scenes/player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_bottom_panel_item=9
 
 [ScriptEditor]
 
 open_scripts=["res://scenes/player.gd"]
-selected_script=""
-open_help=["Camera2D"]
+selected_script="res://scenes/player.gd"
+open_help=[]
 script_split_offset=70
 list_split_offset=0
 
