preparing for pull request

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,15 +1,7 @@
 [editor_metadata]
 
-<<<<<<< HEAD
-executable_path="C:/Users/terre/Downloads/Godot_v4.2.1-stable_mono_win64/Godot_v4.2.1-stable_mono_win64.exe"
-=======
-executable_path="C:/Users/VSU Computer Science/Documents/Godot_v4.2.1-stable_mono_win64/Godot_v4.2.1-stable_mono_win64.exe"
-tile_source_sort=0
->>>>>>> d558ce5a2cb1b5fa2d7aa96a69ff4e11fb55eb63
-
-[debug_options]
-
-run_live_debug=true
+<<<<<<<HEADexecutable_path="C:/Users/terre/Downloads/Godot_v4.2.1-stable_mono_win64/Godot_v4.2.1-stable_mono_win64.exe"
+">>>>>>>d558ce5a2cb1b5fa2d7aa96a69ff4e11fb55eb63[debug_options]run_live_debug"=true
 run_reload_scripts=true
 
 [dialog_bounds]
