--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -19,25 +19,21 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://assets/characters/player/male/charater_3/clothes_1/punch_4_alt.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/", "res://assets/tilepacks/", "res://assets/tilepacks/desert/", "res://assets/tilepacks/desert/tileset/", "res://assets/tilepacks/desert/showcase/", "res://assets/tilepacks/desert/props/", "res://assets/tilepacks/desert/background/", "res://assets/particle_effects/player_effects/", "res://assets/particle_effects/player_effects/smoke_and_dust/", "res://assets/characters/", "res://assets/characters/player/", "res://assets/characters/player/male/", "res://assets/characters/player/male/charater_3/", "res://assets/characters/player/male/charater_3/clothes_1/")
+dock_filesystem_selected_paths=PackedStringArray("res://assets/characters/player/male/charater_3/clothes_1/pickup_ground_4_alt.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/", "res://assets/characters/", "res://assets/characters/player/", "res://assets/characters/player/male/", "res://assets/characters/player/male/charater_3/", "res://assets/characters/player/male/charater_3/clothes_1/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/player.tscn", "res://scenes/platform_01.tscn", "res://scenes/main.tscn", "res://scenes/player_effects.tscn", "res://scenes/background.tscn")
-current_scene="res://scenes/main.tscn"
+open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/platform_01.tscn", "res://scenes/player.tscn")
+current_scene="res://scenes/player.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-<<<<<<< HEAD
+<<<<<<<HEADselected_main_editor_idx=0
 selected_main_editor_idx=0
-selected_bottom_panel_item=0
-=======
-selected_main_editor_idx=2
 selected_bottom_panel_item=9
->>>>>>> b9031debf0d452d68f40a2799c471d98499f5a7e
 
 [ScriptEditor]
 
