--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://assets/", "res://assets/tilepacks/", "res://assets/tilepacks/interactible_objects/", "res://assets/tilepacks/desert/tileset/", "res://assets/tilepacks/desert/showcase/", "res://assets/tilepacks/desert/props/", "res://assets/particle_effects/player_effects/", "res://assets/particle_effects/player_effects/smoke_and_dust/", "res://assets/characters/player/", "res://assets/characters/player/male/", "res://assets/characters/player/male/charater_3/", "res://assets/characters/player/male/charater_3/clothes_1/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
